--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ a{
     text-decoration: underline;
 }
 header{
-    background-image: url(../img/300.jpeg);
+    background-image: url(../img/800.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     font-size: 3rem;
@@ -28,12 +28,14 @@ header{
     padding: 50px 0px;
 }
 header h1{
-    color: hsl(200deg, 10%, 25%);
+    color: hsl(200deg, 40%, 55%);
     padding: 3rem 1rem;
+    text-shadow: 4px 3px blue; 
 }
 header h2{
     color: hsl(200deg, 100%, 15%);
     padding: 1rem;
+    text-shadow: 1px 1px white;
 }
 main{
     margin: 2rem 2rem;
